Revision history for BP-Model

{{$NEXT}}

v1.1.2  2019-11-15 17:44:08 CET

	- Added development dependency on OrePAN2.
	- Used Dist::Zilla::Plugin::Run for releases.

v1.01
	- Removed dependency on TabParser, as it is not needed

v1.00
	- Forked from https://github.com/inab/BP-Schema-tools.git
	- Initial release based on Dist::Milla.