@@ -30,6 +30,7 @@ on test => sub {
 
 on develop => sub {
     requires 'Dist::Milla', '1.0.20';
+    requires 'Dist::Zilla::Plugin::MakeMaker';
     requires 'Dist::Zilla::Plugin::Prereqs::FromCPANfile';
     requires 'Dist::Zilla::Plugin::Run', '0.048';
     requires 'OrePAN2';
