@@ -11,4 +11,6 @@ run = cd ~/projects/darkpan && git add authors && git commit -a -m 'Added %n-%v'
 
 [@Milla]
 installer = MakeMaker
+
+[Prereqs::FromCPANfile]
 ; Prereqs are managed in cpanfile
